# THE-MULTIVERSE

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Coder's Ttype.cpp  LICENSE  Multiverse.desktop  Multiverse_Linux.AppImage  NEW PLAN.txt  README.md  RUN_PROJECT.sh  SECURITY.md  TetrisX.cpp  TetrisX.h  build_all.sh  geno.sh  h.cpp  multi.cpp  reptor-tasks.cpp  starter.cpp  test.cpp
.github/workflows/: c-cpp.yml
Multiverse.AppDir/: AppRun.sh  Multiverse.desktop
upds/: manifest.json
